[package]
name = "database-server"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = { version = "3.1.0", features = ["anyhow"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid"] }
uuid = { version = "1.17.0", features = ["serde"] }
validator = "0.20.0"
tokio = { version = "1.41.0", features = ["full"] }
anyhow = "1.0.92"
